<resources>
    <string name="app_name">Analyzer_Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Analyzer Manager</string>
    <string name="nav_header_subtitle">Hello!</string>
    <string name="nav_header_desc">Hey!</string>
    <string name="action_settings">Settings</string>

    <string name="menu_changeip">Change IP</string>
    <string name="menu_brightness">Brightness</string>
    <string name="menu_size">Size</string>

    <string name="changeip_text">Type IP address:</string>
    <string name="changeip_hint">192.168.0.1</string>
    <string name="brightness_text">Change Brightness value:</string>
    <string name="animation">Animation</string>
    <string name="color">Color</string>
    <string name="desc">Easy way to manage your device!</string>
    <string name="signal">Signal</string>
    <string name="choose_color1">Choose RGB color:</string>
    <string name="apply">Apply</string>
    <string name="smooth">Change Smooth value:</string>
    <string name="type_a_num">Type a number</string>
    <string name="input_gain_text">Change Input Gain Value:</string>
    <string name="low_pass_text">Change Low Pass Value:</string>
    <string name="max_coef_text">Change Max Coefficient Value:</string>
</resources>