<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signal.SignalFragment">
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewInputGain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="10dp"
        android:backgroundTint="#4A673AB7"
        app:cardElevation="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

            <TextView
                android:id="@+id/text_changeinputgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_gain_text"
                android:textAlignment="center"
                android:textSize="25dp"

                />
            <EditText
                android:id="@+id/editInputGain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/type_a_num"
                />
            <Button
                android:id="@+id/bApplyInputGain"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:text="@string/apply"
                android:layout_marginTop="8dp"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewLowPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cardViewInputGain"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="#4A673AB7"
        app:cardElevation="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp"
            >
            <TextView
                android:id="@+id/text_changelowpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/low_pass_text"
                android:textAlignment="center"
                android:textSize="25dp"
                />
            <EditText
                android:id="@+id/editLowPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/type_a_num"
                />
            <Button
                android:id="@+id/bApplyLowPass"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:text="@string/apply"
                android:layout_marginTop="8dp"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewMaxCoef"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cardViewLowPass"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="#4A673AB7"
        app:cardElevation="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

            <TextView
                android:id="@+id/text_changemaxcoef"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/max_coef_text"
                android:textAlignment="center"
                android:textSize="25dp"
                />
            <EditText
                android:id="@+id/editMaxCoef"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/type_a_num"
                />
            <Button
                android:id="@+id/bApplyMaxCoef"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:text="@string/apply"
                android:layout_marginTop="8dp"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>